--- a/views/list.njk
+++ b/views/list.njk
@@ -1,1 +1,9 @@
-<h1>Bem-Vindo, {{ name }}</h1
+<h1>Listagens de Usuários</h1>
+
+<ul>
+  {% for user in users %}
+  <li>{{ user }}</li>
+  {% endfor %}
+</ul>
+
+<a href="/new">Cadastrar Usuário</a>
