Desafio 1 Concluido + resposta rocketseat

--- a/views/new.njk
+++ b/views/new.njk
@@ -1,8 +1,12 @@
-<h1> Novo Usuário </h1>
+<h1>
+  Novo Usuário
+</h1>
 
 <form action="/create" method="POST">
-  <input name="user" />
-  <button type="submit"> Salvar <button/>
-</form>
+  <input name="user"/>
+  <button type="submit">
+    Salvar
+    <button/>
+  </form>
 
-<a href="/">Listagens de Usuários</a>
+  <a href="/">Listagens de Usuários</a>
