--- a/views/list.njk
+++ b/views/list.njk
@@ -1,9 +1,7 @@
 <h1>Listagens de Usuários</h1>
 
 <ul>
-  {% for user in users %}
-  <li>{{ user }}</li>
-  {% endfor %}
+  <li>{{ age }}</li>
 </ul>
 
 <a href="/new">Cadastrar Usuário</a>
